# CircuitsAPI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
circuitsapi/: __init__.py  client.py  exceptions.py
examples/: helloworld.py
rr_transmitter/: __init__.py  client.py  exceptions.py
rr_transmitter/recnetlogin/: client.py  exceptions.py
src/circuitsapi/: __init__.py  client.py  helpers.py
transmitter/: client.py  exceptions.py  helpers.py  request.py
